// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Identify and quantify cost savings across Azure subscriptions by analyzing actual costs, utilization metrics, and generating actionable optimization recommendations. WHEN: optimize Azure costs, reduce Azure spending, reduce Azure expenses, analyze Azure costs, find cost savings, generate cost optimization report, find orphaned resources, rightsize VMs, cost analysis, reduce waste, Azure spending analysis, find unused resources, optimize Redis costs.",
  "extractedKeywords": [
    "across",
    "actionable",
    "actual",
    "analysis",
    "analyze",
    "analyzing",
    "app service",
    "azure",
    "cli",
    "container",
    "cosmos",
    "cost",
    "costs",
    "expenses",
    "find",
    "function",
    "generate",
    "generating",
    "identify",
    "key vault",
    "mcp",
    "metrics",
    "monitor",
    "optimization",
    "optimize",
    "orphaned",
    "quantify",
    "recommendations",
    "redis",
    "reduce",
    "report",
    "resources",
    "rightsize",
    "savings",
    "spending",
    "sql",
    "storage",
    "subscriptions",
    "unused",
    "utilization",
    "validation",
    "waste",
    "when",
  ],
  "name": "azure-cost-optimization",
}
`;

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "across",
  "actionable",
  "actual",
  "analysis",
  "analyze",
  "analyzing",
  "app service",
  "azure",
  "cli",
  "container",
  "cosmos",
  "cost",
  "costs",
  "expenses",
  "find",
  "function",
  "generate",
  "generating",
  "identify",
  "key vault",
  "mcp",
  "metrics",
  "monitor",
  "optimization",
  "optimize",
  "orphaned",
  "quantify",
  "recommendations",
  "redis",
  "reduce",
  "report",
  "resources",
  "rightsize",
  "savings",
  "spending",
  "sql",
  "storage",
  "subscriptions",
  "unused",
  "utilization",
  "validation",
  "waste",
  "when",
]
`;
